<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/bg_1" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popular1" />

    <TextView
        android:id="@+id/allMenu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/allMenu_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/allMenu_name"
        app:layout_constraintTop_toBottomOf="@+id/allMenu_name" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/allMenu_note"
        app:layout_constraintTop_toBottomOf="@+id/allMenu_note"
        app:srcCompat="@drawable/ic_star" />

    <TextView
        android:id="@+id/allmenu_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="3.9"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/allmenu_deliverytime"
        android:layout_width="34dp"
        android:layout_height="13dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/time_bg"
        android:text="@string/_45_mins"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/allmenu_rating"
        app:layout_constraintStart_toEndOf="@+id/allmenu_rating"
        app:layout_constraintTop_toTopOf="@+id/allmenu_rating" />

    <TextView
        android:id="@+id/allmenu_delivery_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/free_drelivery"
        app:layout_constraintBottom_toBottomOf="@+id/allmenu_deliverytime"
        app:layout_constraintStart_toEndOf="@+id/allmenu_deliverytime"
        app:layout_constraintTop_toTopOf="@+id/allmenu_deliverytime" />

    <TextView
        android:id="@+id/allmenu_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/_160"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>